# RenderVisitor

trunk/: CMakeLists.txt  Color.cpp  Color.h  ConsoleRenderer.cpp  ConsoleRenderer.h  DirectXRenderer.cpp  DirectXRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Rectangle.cpp  Rectangle.h  Renderer.cpp  Renderer.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  main.cpp
